--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -15,9 +15,9 @@ server {
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    #location = /50x.html {
+    #    root   /usr/share/nginx/html;
+    #}
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
@@ -28,8 +28,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        fastcgi_pass   172.17.0.3:9000;
-        #fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   myphp:9000;
         fastcgi_index  index.php;
         #fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
