--- a/php/php.ini
+++ b/php/php.ini
@@ -1905,10 +1905,10 @@ ldap.max_links = -1
 ;openssl.cafile=
 
 [xdebug]
-xdebug.idekey = PHPSTORM 
-xdebug.remote_enable = 1   
-xdebug.remote_connect_back = 0
-xdebug.remote_port = 9010 
+#xdebug.idekey = PHPSTORM 
+#xdebug.remote_enable = 1   
+#xdebug.remote_connect_back = 0
+#xdebug.remote_port = 9010 
 #xdebug.remote_host = 192.168.102.1   
 
 
