--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,6 +8,7 @@ server {
     location / {
         root   /usr/share/nginx/html/blog/public;
         index  index.html index.htm index.php;
+        try_files $uri $uri/ /index.php$is_args$query_string;
     }
 
     #error_page  404              /404.html;
