--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2"
 services:
-  mydb:
+  mysql:
     container_name: "mydb"
     restart: always
     ports:
@@ -10,13 +10,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 123456
     image: mysql:8.0
-  myredis:
+  redis:
     container_name: "myredis"
     restart: always
     ports:
     - "6379:6379"
     image: redis:3.2
-  myphp:
+  php:
     container_name: "myphp"
     restart: always
     ports:
@@ -28,7 +28,7 @@ services:
     - "mydb"
     - "myredis"
     image: php:7.2-fpm
-  mynginx:
+  nginx:
     container_name: "mynginx"
     restart: always
     ports:
