--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2"
 services:
-  mysql:
+  mydb:
     container_name: "mydb"
     restart: always
     ports:
@@ -10,13 +10,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 123456
     image: mysql:8.0
-  redis:
+  myredis:
     container_name: "myredis"
     restart: always
     ports:
     - "6379:6379"
     image: redis:3.2
-  php:
+  myphp:
     container_name: "myphp"
     restart: always
     ports:
@@ -28,7 +28,7 @@ services:
     - "mydb"
     - "myredis"
     image: php:7.2-fpm
-  nginx:
+  mynginx:
     container_name: "mynginx"
     restart: always
     ports:
