--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -1,26 +1,23 @@
 version: "2"
 services:
   mydb:
+    build: ./php
     container_name: "mydb"
     restart: always
     ports:
       - "3306:3306"
     volumes:
       - /server/mysql:/var/lib/mysql
-      - /etc/localtime:/etc/localtime:ro
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-    image: mysql:8.0
   myredis:
+    build: ./redis
     container_name: "myredis"
     restart: always
     ports:
       - "6379:6379"
-    volumes:
-      - /server/redis:/data
-      - /etc/localtime:/etc/localtime:ro
-    image: redis:3.2
   myphp:
+    build: ./mysql
     container_name: "myphp"
     restart: always
     ports:
@@ -28,12 +25,11 @@ services:
     volumes:
       - /server/www:/var/www/html
       - /server/php:/usr/local/etc/php
-      - /etc/localtime:/etc/localtime:ro
     links:
       - "mydb"
       - "myredis"
-    image: php:7.2-fpm
   mynginx:
+    build: ./nginx
     container_name: "mynginx"
     restart: always
     ports:
@@ -44,5 +40,3 @@ services:
       - /server/www:/usr/share/nginx/html
       - /server/nginx:/etc/nginx
       - /server/logs/nginx.logs:/var/log/nginx
-      - /etc/localtime:/etc/localtime:ro
-    image: nginx:latest
