--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -18,18 +18,16 @@ RUN apt-get update && apt-get install -y \
         && docker-php-ext-install mysqli \
         && rm -r /var/lib/apt/lists/*
 # 将预先下载好的拓展包从宿主机拷贝进去
-#COPY ./pkg/redis.tgz /server/php_lib/redis-4.1.0.tgz
+COPY redis.tgz /server/php_lib/redis-4.1.0.tgz
+RUN tar zxvf  redis.tgz
 # 安装 PECL 拓展，这里我们安装的是Redis
-RUN pecl install /server/php_lib/redis-4.1.0.tgz
-RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
+RUN pecl install /server/php_lib/redis && echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 
 # 安装 Composer
 ENV COMPOSER_HOME /root/composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 ENV PATH $COMPOSER_HOME/vendor/bin:$PATH
 
-RUN rm -f /home/redis.tgz \
-        rm -f /home/cphalcon.tar.gz
 WORKDIR /data
 # Write Permission
 RUN usermod -u 1000 www-data
