--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -17,8 +17,8 @@ RUN apt-get update && apt-get install -y \
         && docker-php-ext-install mysqli \
         && rm -r /var/lib/apt/lists/*
 
-RUN pecl install redis-4.0.1 \
-	&& pecl install xdebug-2.6.0 \
+RUN pecl install redis \
+	&& pecl install xdebug \
 	&& docker-php-ext-enable redis xdebug
 
 WORKDIR /data
