--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -5,21 +5,21 @@ MAINTAINER goozp "946818508@qq.com"
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 # 更新安装依赖包和PHP核心拓展
-#RUN apt-get update && apt-get install -y \
-#        libfreetype6-dev \
-#        libjpeg62-turbo-dev \
-#        libpng-dev \
-#    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-#    && docker-php-ext-install -j$(nproc) gd \
-#        && docker-php-ext-install zip \
-#        && docker-php-ext-install pdo_mysql \
-#        && docker-php-ext-install opcache \
-#        && docker-php-ext-install mysqli \
-#        && rm -r /var/lib/apt/lists/*
-#
-#RUN pecl install redis \
-#	&& pecl install xdebug \
-#	&& docker-php-ext-enable redis xdebug
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd \
+        && docker-php-ext-install zip \
+        && docker-php-ext-install pdo_mysql \
+        && docker-php-ext-install opcache \
+        && docker-php-ext-install mysqli \
+        && rm -r /var/lib/apt/lists/*
+
+RUN pecl install redis \
+	&& pecl install xdebug \
+	&& docker-php-ext-enable redis xdebug
 
 WORKDIR /data
 # Write Permission
