--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     restart: always
     ports:
       - "6379:6379"
+    volumes:
+      - /server/redis:/data
   myphp:
     build: ./php
     container_name: "myphp"
