--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,8 +2,13 @@ server {
     listen       80;
     server_name  localhost;
 
-    #charset koi8-r;
+    charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
+
+    #gzip on;
+    #gzip_disable "msie6";
+    #gzip_types text/plain text/css text/xml text/javascript application/json application/x-javascript application/xml application/xml+rss application/javascript;
+
 
     location / {
         root   /usr/share/nginx/html/blog/public;
@@ -29,10 +34,12 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
+        include fastcgi_params;
+
         fastcgi_pass   myphp:9000;
         fastcgi_index  index.php;
-        #fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        #fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
         include        fastcgi_params;
     }
 
