--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3306:3306"
     volumes:
       - /server/mysql:/var/lib/mysql
+      - /server/mysql/mysql_sock:/var/run/mysqld
     environment:
       MYSQL_ROOT_PASSWORD: 123456
   myredis:
@@ -27,6 +28,7 @@ services:
     volumes:
       - /server/www:/var/www/html
       - /server/php:/usr/local/etc/php
+      - /server/mysql/mysql_sock:/var/run/mysqld
     links:
       - "mydb"
       - "myredis"
