--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,7 +8,7 @@ server {
     #gzip on;
     #gzip_disable "msie6";
     #gzip_types text/plain text/css text/xml text/javascript application/json application/x-javascript application/xml application/xml+rss application/javascript;
-    root   /server/wwwblog/public;
+    root   /server/www/blog/public;
 
     location / {
         root   /usr/share/nginx/html/blog/public;
