--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,7 +8,6 @@ server {
     #gzip on;
     #gzip_disable "msie6";
     #gzip_types text/plain text/css text/xml text/javascript application/json application/x-javascript application/xml application/xml+rss application/javascript;
-    root   /server/www/blog/public;
 
     location / {
         root   /usr/share/nginx/html/blog/public;
@@ -38,7 +37,7 @@ server {
 
         fastcgi_pass   myphp:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  /server/www/blog/public$fastcgi_script_name;
         #fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
         include        fastcgi_params;
     }
