--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -33,13 +33,12 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root /var/www/html/blog/public;
+        root /var/www/html;
         include fastcgi_params;
 
         fastcgi_pass   myphp:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        #fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $document_root/blog/public$fastcgi_script_name;
         include        fastcgi_params;
     }
 
