--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
     #gzip_types text/plain text/css text/xml text/javascript application/json application/x-javascript application/xml application/xml+rss application/javascript;
 
     location / {
-        root   /usr/share/nginx/html/blog/public;
+        root   /server/www/blog/public;
         index  index.html index.htm index.php;
         try_files $uri $uri/ /index.php$is_args$query_string;
     }
