--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -33,7 +33,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root /var/www/html;
+        root myphp:/var/www/html;
         include fastcgi_params;
 
         fastcgi_pass   myphp:9000;
