--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
     #gzip_types text/plain text/css text/xml text/javascript application/json application/x-javascript application/xml application/xml+rss application/javascript;
 
     location / {
-        root   /server/www/blog/public;
+        root   /usr/share/nginx/html/blog/public;
         index  index.html index.htm index.php;
         try_files $uri $uri/ /index.php$is_args$query_string;
     }
@@ -33,12 +33,11 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root /var/www/html;
         include fastcgi_params;
 
         fastcgi_pass   myphp:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root/blog/public$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME   /var/www/html/blog/public$fastcgi_script_name;
         include        fastcgi_params;
     }
 
