--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "3306:3306"
     volumes:
       - /server/mysql:/var/lib/mysql
-      - /server/mysql/mysql_sock:/var/run/mysqld
+      - /server/mysql_sock:/var/run/mysqld
     environment:
       MYSQL_ROOT_PASSWORD: 123456
   myredis:
