--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -17,7 +17,9 @@ RUN apt-get update && apt-get install -y \
         && rm -r /var/lib/apt/lists/*
 
 RUN pecl install redis \
-	&& pecl install xdebug \
-	&& docker-php-ext-enable redis xdebug
+	&& pecl install xdebug
+
+RUN echo "extension=pdo_mysql" >> /usr/local/etc/php/conf.d/docker-php-ext-mysql.ini \
+    && echo "extension=redis" >> /usr/local/etc/php/conf.d/docker-php-ext-redis.ini
 
 RUN usermod -u 1000 www-data
