--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -15,9 +15,7 @@ RUN apt-get update && apt-get install -y \
         && docker-php-ext-install opcache \
         && docker-php-ext-install mysqli
 
-RUN pecl install redis \
-	&& pecl install xdebug \
-	&& docker-php-ext-enable redis \
-	&& docker-php-ext-enable xdebug
+RUN pecl install redis && docker-php-ext-enable redis \
+	&& pecl install xdebug && docker-php-ext-enable xdebug
 
 RUN usermod -u 1000 www-data
