--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "9000:9000"
     volumes:
       - /server/www:/var/www/html
-      - /server/php/php.ini:/usr/local/etc/php/php.ini-development
+      - /server/php:/usr/local/etc/php
     links:
       - "mydb"
       - "myredis"
