--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "9000:9000"
     volumes:
       - /server/www:/var/www/html
-      - /server/php:/usr/local/etc/php
+      - /server/php/php.ini:/usr/local/etc/php/php.ini
       - /etc/localtime:/etc/localtime:ro
     links:
       - "mydb"
