--- a/compose.dockerfiles/docker-compose.yml
+++ b/compose.dockerfiles/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - /server/mysql:/var/lib/mysql
+      - /server/mysql/conf:/etc/mysql
+      - /server/mysql/data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: 123456
   myredis:
