--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update && apt-get install -y \
         libjpeg62-turbo-dev \
         libpng-dev \
 	zip unzip \ 
+	curl \ 
+RUN apt-get install -y build-essential libssl-dev zlib1g-dev libpng-dev libjpeg-dev libfreetype6-dev
+
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
         && docker-php-ext-install zip \
