--- a/compose.dockerfiles/php/Dockerfile
+++ b/compose.dockerfiles/php/Dockerfile
@@ -4,5 +4,15 @@ MAINTAINER goozp "946818508@qq.com"
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
+RUN apt-get update && apt-get install -y build-essential libssl-dev zlib1g-dev libpng-dev libjpeg-dev libfreetype6-dev libzip-dev libjpeg62-turbo-dev libpng-dev zip unzip curl \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd \
+        && docker-php-ext-install zip \
+        && docker-php-ext-install pdo_mysql \
+        && docker-php-ext-install opcache \
+        && docker-php-ext-install mysqli
+
+RUN pecl install redis && docker-php-ext-enable redis
+
 RUN echo "" >> /usr/local/etc/php/php.ini
 RUN usermod -u 1000 www-data
