--- a/nginx/nginx.example.conf
+++ b/nginx/nginx.example.conf
@@ -1,4 +1,3 @@
-
 user  nginx;
 worker_processes  1;
 
@@ -7,7 +6,7 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  2048;
     multi_accept on;
     use epoll;
 }
@@ -17,6 +16,7 @@ http {
     server_tokens off;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    client_max_body_size 20M;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -25,7 +25,7 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    keepalive_timeout  65;
+    keepalive_timeout  15;
 
     gzip on;                     #开启gzip压缩功能
     gzip_min_length 10k;         #设置允许压缩的页面最小字节数; 这里表示如果文件小于10个字节，就不用压缩，因为没有意义，本来就很小.
@@ -33,7 +33,7 @@ http {
     gzip_http_version 1.1;       #压缩版本
     gzip_comp_level 2;           #设置压缩比率，最小为1，处理速度快，传输速度慢；9为最大压缩比，处理速度慢，传输速度快; 这里表示压缩级别，可以是0到9中的任一个，级别越高，压缩就越小，节省了带宽资源，但同时也消耗CPU资源，所以一般折中为6
     gzip_types text/css text/xml application/javascript;      #制定压缩的类型,线上配置时尽可能配置多的压缩类型!
-    gzip_disable "MSIE [1-6]\.";       #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
+    gzip_disable "msie6";        #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
 
     include /etc/nginx/conf.d/*.conf;
 }
