--- a/nginx/nginx.example.conf
+++ b/nginx/nginx.example.conf
@@ -32,7 +32,7 @@ http {
     gzip_buffers 4 16k;          #设置压缩缓冲区大小，此处设置为4个16K内存作为压缩结果流缓存
     gzip_http_version 1.1;       #压缩版本
     gzip_comp_level 2;           #设置压缩比率，最小为1，处理速度快，传输速度慢；9为最大压缩比，处理速度慢，传输速度快; 这里表示压缩级别，可以是0到9中的任一个，级别越高，压缩就越小，节省了带宽资源，但同时也消耗CPU资源，所以一般折中为6
-    gzip_types text/css text/xml application/javascript;      #制定压缩的类型,线上配置时尽可能配置多的压缩类型!
+    gzip_types text/plain text/css text/xml application/javascript;      #制定压缩的类型,线上配置时尽可能配置多的压缩类型!
     gzip_disable "msie6";        #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
 
     include /etc/nginx/conf.d/*.conf;
