--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
-
 user  nginx;
 worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
 events {
-    worker_connections  1024;
+  worker_connections  1024;
+  multi_accept on;
+  use epoll;
 }
 
 
@@ -22,11 +22,13 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    #client_max_body_size 2M;
     #tcp_nopush     on;
 
     keepalive_timeout  65;
 
     #gzip  on;
+    #gzip_disable "msie6";
 
     include /etc/nginx/conf.d/*.conf;
 }
