--- a/nginx/nginx.example.conf
+++ b/nginx/nginx.example.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  1;
+worker_processes  2;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -25,6 +25,7 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    #tcp_nopush     on;
     keepalive_timeout  15;
 
     gzip on;                     #开启gzip压缩功能
